--- a/OntoViewer/src/requirements.txt
+++ b/OntoViewer/src/requirements.txt
@@ -9,7 +9,7 @@ httplib2==0.11.3
 idna==2.7
 isodate==0.6.0
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.0
 oauth2==1.9.0.post1
 oauthlib==2.1.0
@@ -23,10 +23,10 @@ requests==2.20.0
 requests-oauthlib==1.0.0
 rsa==4.0
 six==1.11.0
-SQLAlchemy==1.2.11
+SQLAlchemy>=1.3.0
 uritemplate==3.0.0
-urllib3==1.24
-Werkzeug==0.14.1
+urllib3>=1.24.2
+werkzeug>=0.15.3
 tweepy==3.8.0
 Owlready==0.22
 gensim==0.13.4
